--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,13 @@ jobs:
       - run:
           name: Run tests
           # Here just using the command line way of running the test file
-          command: python import_remover_tests.py
+          command: 
+          python import_remover_tests.py
+          $HOME/.local/bin/coverage run -m pytest
+          $HOME/.local/bin/coverage report
+          $HOME/.local/bin/coverage html  # open htmlcov/index.html in a browser
+      - store_artifacts:
+        path: htmlcov
 
 # Invoke jobs via workflows
 workflows:
