--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,8 @@ jobs:
       - run:
           name: Run tests
           # Here just using the command line way of running the test file
-          command: python import_remover_tests.py
+          command: |
+          python import_remover_tests.py
           coverage run -m pytest
           coverage report
           coverage html
