--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,10 @@ jobs:
           name: Run tests
           # Here just using the command line way of running the test file
           command: |
-            python import_remover_tests.py
-            coverage run -m pytest
-            coverage report
-            coverage html
+            $HOME/.local/bin/python import_remover_tests.py
+            $HOME/.local/bin/coverage run -m pytest
+            $HOME/.local/bin/coverage report
+            $HOME/.local/bin/coverage html
       - store_artifacts:
         path: htmlcov
 
